-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.8, 6.4.0 FF
-
-
77fcd47febec58eaf35610c72f2d9bdfb1ee4174
When using a mouse connected to an iPad, mouse scroll wheel does not interact with scrollable elements like ListView.
In order to confirm this issue I have made a simple example that contains a ListView and a basic model.
How to replicate:
- connect a mouse to an iPad using a camera connection kit
- run the app and try to use the scroll wheel to interact with the list
Mouse scroll wheel cannot be used to scroll the ListView.
We have been having many requests from our users to add mouse scroll wheel support to our apps.
For Gerrit Dashboard: QTBUG-99795 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
416463,9 | iOS plugin: Add support for wheel events | dev | qt/qtbase | Status: MERGED | +2 | 0 |
438953,3 | iOS plugin: Add support for wheel events | 6.4 | qt/qtbase | Status: MERGED | +2 | 0 |