iOS plugin: Add support for wheel events

Use UIPanGestureRecognizer to handle mouse and trackpad scroll.

Task-number: QTBUG-99795
Change-Id: I5db7fabf55b6f2e6f7ba90a0b90ecb08734e2329
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit 77fcd47febec58eaf35610c72f2d9bdfb1ee4174)
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>